namespace blueberry.Core;

public record TagCreateDto(string Name);
public record TagDto(int Id, string Name);